--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -11,11 +11,14 @@ html(lang="en")
         script(src="/javascripts/sea.js")
     body
         div#header-box
+
+        section#page-banner
+
         section.page-banner
             // pc
-            .banner-box
-                p.banner-title Welcome Titan Blog !
-                p.banner-subtxt.f-w 一个简约的网站
+            //.banner-box
+            //    p.banner-title Welcome Titan Blog !
+            //    p.banner-subtxt.f-w 一个简约的网站
         section.page-body.content-box
 
         footer.page-foot
